--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <h2> Mañana es miércoles... </h2>
                     </div>
                     <div class="col-lg mb-lg-4">
-                        <img src="comic.png" class="img-fluid" alt="" srcset="">
+                        <img src="comc.png" class="img-fluid" alt="" srcset="">
                     </div>
                 </div>
                 
